added themes and genres api
